# llmscope-reference

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/: spec.md  tasks.md
.kiro/specs/001-initial-specs/: design.md
.kiro/specs/002-wire-telemetry/: design.md  spec.md  tasks.md
.kiro/steering/: architecture.md  engineering.md  scope.md
app/: __init__.py  api.py  main.py  schemas.py  settings.py
config/: policy.yaml
policy/: __init__.py  engine.py  loader.py  log.py  models.py
reporting/: __init__.py  queries.py
tests/: __init__.py  conftest.py  test_api.py  test_decision_log.py  test_health.py  test_policy.py  test_queries.py  test_schemas.py  test_telemetry_wiring.py
