[project]
name = "llmscope-reference"
version = "0.1.0"
description = "Reference workload for runtime economics and operational governance of LLM requests"
requires-python = ">=3.11"
dependencies = [
    "llmscope @ git+https://github.com/lucianareynaud/llmscope.git@5d3fdfbc8558a297b95491c5f332c43a1588b627",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
    "duckdb>=0.10",
    "pydantic>=2.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "policy*", "reporting*"]
exclude = ["tests*", "artifacts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
